--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">superapp</string>
     <string name="search">Search</string>
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="base_url">http://127.0.0.1:7000/</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
