--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="base_url">http://127.0.0.1:7000/</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_payment">PaymentActivity</string>
 </resources>
